# poe

./: .gitignore  Cargo.toml  DESIGN.md  LICENSE  README.md  flake.nix  install.sh
.github/workflows/: release.yml
runtime/: poe_rt.c
src/: lib.rs  main.rs
src/capture/: mod.rs  runner.rs  stacks.rs  stdio.rs  syscalls.rs  tracer.rs
src/cli/: build.rs  diff.rs  doctor.rs  explain.rs  mod.rs  query.rs  run.rs  trace.rs  update.rs
src/distributed/: trace_context.rs
src/events/: types.rs
src/explain/: analyzer.rs  diff.rs  mod.rs  realtime_diff.rs
src/hooks/: adapter.rs  mod.rs  python.rs  rust.rs  sitecustomize.py
src/pack/: mod.rs  reader.rs  summary.rs  writer.rs
src/redact/: mod.rs  patterns.rs
src/serve/: server.rs
src/symbols/: resolver.rs
src/trace/: db.rs  mod.rs
src/util/: mod.rs  procfs.rs  ringbuf.rs
tests/: integration.rs
