[package]
name = "poe"
version = "0.1.0"
edition = "2021"
description = "Auto-annotating debug packets for AI-native debugging"
license = "MIT"

[[bin]]
name = "poe"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"

[dependencies]
anyhow = "1"
byteorder = "1"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
colored = "2"
libc = "0.2"
memmap2 = "0.9"
nix = { version = "0.29", features = ["ptrace", "signal", "process", "fs"] }
rusqlite = { version = "0.31", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "2", default-features = false, features = ["deflate-zlib-ng"] }
tiny_http = "0.12"

[profile.release]
opt-level = 2
lto = "thin"
